--- a/MVP.ipynb
+++ b/MVP.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3d607af0",
+   "metadata": {},
+   "source": [
+    "# Netflix Classification Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d7a74ca",
+   "metadata": {},
+   "source": [
+    "# ![TLC logo](https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/2560px-Netflix_2015_logo.svg.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0ec6c255",
    "metadata": {},
    "source": [
