--- a/MVP.ipynb
+++ b/MVP.ipynb
@@ -376,7 +376,7 @@
    "id": "13f2bdcc",
    "metadata": {},
    "source": [
-    "* ### We check the performance based on F1 score"
+    "* We check the performance based on F1 score"
    ]
   },
   {
@@ -518,9 +518,9 @@
    "source": [
     "## Current Findings\n",
     "\n",
-    "* #### The base line model is KNN.\n",
-    "* #### The second model was Decision Tree, and the results were not better.\n",
-    "* #### Then we traied Random Forest, and it gave us the best score so far."
+    "* The base line model is KNN.\n",
+    "* The second model was Decision Tree, and the results were not better.\n",
+    "* Then we traied Random Forest, and it gave us the best score so far."
    ]
   },
   {
